2014-06-13  Mario Lang  <mlang@delysid.org>

	* chess-pos.el (chess-pos-en-passant, chess-pos-status)
	(chess-pos-side-to-move, chess-pos-annotations)
	(chess-pos-preceding-ply): Enable use as generalized variables.
	(chess-pos-p): New function.

	* chess-ply.el (chess-ply-pos, chess-ply-changes)
	(chess-ply-keyword): Enable use as generalized variables.
	(chess-ply-castling-changes): Convert to using
	`chess-next-index'.

	* chess-polyglot.el (chess-polyglot-pos-to-key): Use logxor to invert
	rank instead of two loops to keep rank/file apart.

2014-06-11  Mario Lang  <mlang@delysid.org>

	* chess-pos.el (chess-ply-castling-changes): Declare.

	* chess-ply.el (chess-piece-name-table): Remove, unused.

	* chess-algebraic.el (chess-algebraic-figurine-pieces): New constant.
	(chess-ply--move-text): Remove and fold into...
	(chess-ply-to-algebraic): ...this function.
	Rename argument LONG to TYPE and additionally allow to
	generate figurine notation.
	* chess-var.el (chess-var-add-ply): Fix docstring.
	(chess-var-to-algebraic): Adjust argument names.
	* doc/chess.texi (Making a move in a variation): Same here.
	(Algebraic notation): Mention figurine notation.

2014-06-05  Mario Lang  <mlang@delysid.org>

	* doc/chess.texi (The "next" position): Actually add `chess-ply-next-pos'.

	* chess-ply.el (chess-ply-next-pos): Add docstring.

	* doc/chess.texi (Position coordinates): Document `chess-next-index'
	and related constants.
	(The sought game display): Update as the mentioned mode name has changed.

2014-06-04  Mario Lang  <mlang@delysid.org>

	* chess-ics.el (chess-ics): Add custom-manual link.

	* chess-plain.el (chess-plain): Add custom-manual link.

2005-06-27  John Wiegley  <johnw@newartisans.com>

	* chess-ics.el (chess-ics-sought-add): Added this routine to
	factor out a lot of duplicated code.

	* chess-plain.el (chess-plain-popup): Pass nil for the `font'
	argument to `chess-display-popup-in-frame', since we don't care